horizontal scroll on responsive fixed

--- a/cklassroom-frontend-homepage/src/styles.scss
+++ b/cklassroom-frontend-homepage/src/styles.scss
@@ -13,6 +13,7 @@ body {
   color: $themeFontColor;
   letter-spacing: 0.04rem;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root * {
